legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc540/save_st/pr15698-5.c-5.4.0-1.out.txt
pr15698-5.c: In function ‘isnan’:
pr15698-5.c:7:1: error: number of arguments doesn’t match prototype
 int isnan(a) int a; {}  
 ^
pr15698-5.c:6:20: error: prototype declaration
 void f(void) { int isnan(void); }  
                    ^
